[package]
name = "team_assign"
version = "0.1.0"
authors = ["Gabe Parmer <gparmer@gwu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
itertools = "0.10.1"
rand = "0.8.0"
